--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@
 hs_err_pid*
 /JavaApp/nbproject/private/
 .DS_Store
+/recursaoExercicio1/nbproject/private/
+/recursaoExercicio1/build/
+/recursaoExercicio1/dist/
+/recursaoExercicio2/nbproject/private/
+/recursaoExercicio2/build/
+/recursaoExercicio3/nbproject/private/
+/recursaoExercicio3/build/
