--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@ hs_err_pid*
 /recursaoExercicio2/build/
 /recursaoExercicio3/nbproject/private/
 /recursaoExercicio3/build/
+/recursaoExercicio4/nbproject/private/
+/recursaoExercicio4/build/
+/recursaoExercicio5/nbproject/private/
+/recursaoExercicio5/build/
+/recursaoExercicio7/nbproject/private/
+/recursaoExercicio7/build/
+/recursaoExercicio8/nbproject/private/
+/recursaoExercicio8/build/
