--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@
 hs_err_pid*
 /JavaApp/nbproject/private/
 .DS_Store
+/exercicio1/nbproject/private/
+/exercicio1/build/
+/JavaApp/build/
+/exercicio4/nbproject/private/
+/exercicio4/build/
+/exercicio5/nbproject/private/
+/exercicio5/build/
